feat. update de informações adicionando react e lumen

--- a/index.html
+++ b/index.html
@@ -116,6 +116,21 @@
                 </a>
             </div>
 
+            <div class="card">
+                <strong class="card__desc">Página de portfólio para empresa de contabilidade:</strong>
+
+                <p>Link para o repositório:</p>
+                <a href="https://github.com/pedrojesusdev/Lumen-Contabilidade" class="card__link" target="_blank" rel="noopener noreferrer" aria-label="Repositório do projeto Lumen Contabilidade no GitHub">
+                    Repositório
+                </a>
+
+                <img src="assets/print_lumen.png" alt="Captura de tela do projeto Lumen Contabilidade" class="images__skills" loading="lazy">
+
+                <a href="https://lumen-contabilidade.vercel.app/" class="card__link" target="_blank" rel="noopener noreferrer" aria-label="Visualizar projeto Lumen Contabilidade">
+                    Visualizar projeto
+                </a>
+            </div>
+
         </div>
     </section>
 
@@ -127,6 +142,11 @@
             <div class="list">
                 <img src="assets/next.jpeg" alt="Next.js" class="skills__grid__images">
                 <p>Next.js</p>
+            </div>
+
+            <div class="list">
+                <img src="assets/react.png" alt="React" class="skills__grid__images">
+                <p>React</p>
             </div>
 
             <div class="list">
